--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next dev",
-    "build" : "next build",
-    "start" : "next start"
+    "build": "next build",
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
-    "typescript": "5.5.3"
+    "typescript": "^5.5.3"
   },
   "dependencies": {
     "next": "^14.2.5"
